--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ukraine War: A Global Perspective</title>
     <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/682740ebd1a43246034be6d4e2d061f0.ico/android-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/682740ebd1a43246034be6d4e2d061f0.ico/android-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/682740ebd1a43246034be6d4e2d061f0.ico/android-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/682740ebd1a43246034be6d4e2d061f0.ico/android-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/682740ebd1a43246034be6d4e2d061f0.ico/">
+<link rel="apple-touch-icon" sizes="144x144" href="/682740ebd1a43246034be6d4e2d061f0.ico/">
+<link rel="apple-touch-icon" sizes="152x152" href="/682740ebd1a43246034be6d4e2d061f0.ico/android-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/682740ebd1a43246034be6d4e2d061f0.ico/android-icon-144x144.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="/682740ebd1a43246034be6d4e2d061f0.ico/android-icon-144x144.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <header>
